--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -f Dockerfile.dev -t build_for_test .
 
 script:
-  -  docker run build_for_test npm run test -- --coverage
+  -  docker run -e CI=true build_for_test npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
